--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: ruby
 rvm:
-  - 2.1.0
+  - 2.2.9
+  - 2.3.5
+  - 2.4.3
+  - 2.5.0
+before_install: gem install bundler -v 1.16.0
+cache: bundler
