--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ rvm:
   - 2.5.0
 before_install: gem install bundler -v 1.16.0
 cache: bundler
+test:
+  adapter: sqlite3
+  database: ":memory:"
+  timeout: 500
